# SLiM

./: check_services.py  start_gpu_monitoring.sh  test_live_training_display.py  test_multi_agent_creation.py
.claude/: settings.local.json
agents/: COMANDOS_COMPLETOS.md  COMANDOS_RAPIDOS.md  COMO_USAR.md  COMPLETE_COMMANDS.md  FLUXO_REQUESTS.md  FRONTEND_README.md  GUIA_REQUESTS.md  HOW_TO_USE.md  MULTI_AGENT_TRAINING.md  QUICKSTART.md  QUICK_COMMANDS.md  README.md  REQUESTS_GUIDE.md  app.py  deploy.sh  env.example  evolutionary_agent_optimizer.py  frontend.html  help.py  list_agents.py  listar_agentes.py  open_frontend.sh  setup.sh  (+15 more)
backend/ai/: .dockerignore  .env  .env.example  DEV_STEPS.md  Dockerfile  Dockerfile.light  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.light.yml  docker-compose.yml  init_db.sql  pyproject.toml  requirements-light.txt  requirements.txt  run_simple.py
backend/ai/alembic/: env.py
backend/ai/app/: main.py
backend/ai/app/db/: models.py  session.py
backend/ai/app/routers/: route.py
backend/ai/app/services/: router.py  similarity.py  training.py
backend/ai/app/services/generation/: llm_gemini.py  slm_http.py  slm_local.py
backend/ai/migrations/: env.py
backend/ai/monitoring/: prometheus.yml
backend/ai/slm_service/: .dockerignore  Dockerfile  README.md  app.py
backend/ai/tests/: __init__.py  conftest.py  test_api.py  test_privacy.py  test_repetition.py  test_repetition_detection.py  test_router.py  test_routing.py  test_slm_http.py
backend/ai/utils/: observability.py
backend/ai/workers/: worker.py
(+512 files in other folders)
